NextGenAppPackage/main/default/objects/Plato_Dia__c/Plato_Dia__c.object-meta.xml
<CustomObject>
    <label>Plato Día</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Plato Día Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plato Días</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>