NextGenAppPackage/main/default/objects/Plato_Dia__c/fields/Dia__c.field-meta.xml
<CustomField>
    <fullName>Dia__c</fullName>
    <label>Día</label>
    <referenceTo>Dia__c</referenceTo>
    <relationshipLabel>Plato Días</relationshipLabel>
    <relationshipName>Plato_Dias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>