NextGenAppPackage/main/default/objects/Plato_Dia__c/fields/Plato__c.field-meta.xml
<CustomField>
    <fullName>Plato__c</fullName>
    <label>Plato</label>
    <referenceTo>Plato__c</referenceTo>
    <relationshipLabel>Plato Días</relationshipLabel>
    <relationshipName>Platos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>